--- a/style.scss
+++ b/style.scss
@@ -11,3 +11,11 @@
 *:after {
     box-sizing: border-box;
 }
+
+.wrapper {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
